# summer-of-making

./: .gitignore  Dockerfile  Gemfile  MEMORY_LEAK_DEBUGGING.md  README.md  package-lock.json  tempchangelog.md
.github/workflows/: ci.yml
app/components/: base.rb  button_to.rb  clickable_base.rb  link.rb  styled_button.rb
app/controllers/: application_controller.rb  brainrot_controller.rb  campfire_controller.rb  devlogs_controller.rb  explore_controller.rb  fraud_reports_controller.rb  landing_controller.rb  leaderboard_controller.rb  magic_link_controller.rb  map_controller.rb  projects_controller.rb  sessions_controller.rb  shop_items_controller.rb  shop_orders_controller.rb  showcase_controller.rb  static_pages_controller.rb  users_controller.rb  votes_controller.rb  wrapped_controller.rb
app/helpers/: application_helper.rb
app/jobs/: award_badges_job.rb  daily_advent_sticker_unlock_announce_job.rb  sync_project_languages_job.rb  user_hackatime_data_refresh_job.rb
app/mailers/: authentication_mailer.rb
app/models/: badge.rb  devlog.rb  fraud_report.rb  payout.rb  project.rb  project_language.rb  readme_check.rb  ship_certification.rb  ship_event.rb  shop_item.rb  (+9 more)
config/: credentials.yml.enc  database.yml  flipper_features.yml  importmap.rb  routes.rb
db/: schema.rb  seeds.rb
mole/: AGENT.md  pyproject.toml
script/: debug_data.rb  download_airtable_csv.rb  explore_airtable_schema.rb  export_user_data.rb  find_non_raw_readme_links.rb  import_airtable_data.rb  notify_shell_balance.rb  replay_import_fixed.rb  replayable_import_test.rb  subset_import.rb
(+218 files in other folders)
