[project]
name = "mole-browser"
version = "0.1.0"
description = "Generic browser automation service using browser-use"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "requests>=2.33.0",
    "browser-use>=0.11.13",
    "python-dotenv>=1.2.2",
    "anthropic>=0.101.0",
    "steel-sdk>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py"]

[tool.uv.workspace]
members = ["app"]
